--- a/index.html
+++ b/index.html
@@ -1,67 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title><goit-markup-hw-2></title>
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title><goit-markup-hw-3></title>
   </head>
   <body>
     <header class="page-header">
-      <nav class="home-menu">
-        <a href="./index.html" class="link-logo">Web<span class="studio-logo-style-header">Studio</span></a>
-        <ul class="page-nav">
-          <li><a href="./index.html" class="menu-nav">Studio</a></li>
-          <li><a href="" class="menu-nav">Portfolio</a></li>
-          <li><a href="" class="menu-nav">Contacts</a></li>
+      <nav class="nav-page">
+        <a href="./index.html" class="link-logo-header"
+          >Web<span class="logo-dark">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="./index.html" class="nav-link">Studio</a>
+          </li>
+          <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
         <ul class="contacts-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="contacts-mail"
+              >info@devstudio.com</a
+            >
           </li>
-          <li>
-            <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
+          <li class="contacts-item">
+            <a href="tel:+110001111111" class="contacts-tel"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
 
-    <main>
-      <section class="title">
-        <h1 class="page-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="order-button">Order Service</button>
+    <main class="page-main">
+      <section class="section-hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-order-button">Order Service</button>
       </section>
 
-      <section class="features">
-        <h2 class="title-features">invisible</h2>
+      <section class="section-features">
+        <h2 class="visually-hidden">Features</h2>
         <ul class="features-list">
-          <li>
+          <li class="features-item">
             <h3 class="features-name">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-name">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="features-item">
             <h3 class="features-name">Diligence</h3>
             <p class="features-text">
               Research and confirm brands with the strongest digital growth
@@ -78,111 +86,133 @@
         </ul>
       </section>
 
-      <section class="team">
-        <h2 class="title-team">Our Team</h2>
-        <ul>
-          <li class="team-list">
+      <section class="section-team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/markguerrero.jpg"
               alt="Photo of Mark Guerrero"
               width="264"
-              height="260">
+              height="260"
+            />
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/tomford.jpg"
               alt="Photo of Tom Ford"
               width="264"
-              height="260">
+              height="260"
+            />
             <h3 class="team-name">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/camilagarcia.jpg"
               alt="Photo of Camila Garcia"
               width="264"
-              height="260">
+              height="260"
+            />
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/danielwilson.jpg"
               alt="Photo of Daniel Wilson"
               width="264"
-              height="260">
+              height="260"
+            />
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
 
-      <section class="portfolio">
-        <h2 class="title-portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="section-portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
-            src="./images/bankingappmenuexamples.jpg"
-            alt="bankingappmenuexamples"
-            width="360"
-            height="300">
+              class="portfolio-img"
+              src="./images/bankingappmenuexamples.jpg"
+              alt="banking app menu examples"
+              width="360"
+              height="300"
+            />
             <h3 class="portfolio-name">Banking App</h3>
             <p class="portfolio-text">App</p>
-            </li>
-            <li>
-              <img 
-              src="./images/paymentbyselphone.jpg" 
-              alt="paymentbyselphone" 
-              width="360" 
-              height="300">
-              <h3 class="portfolio-name">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li>
-              <img 
-              src="./images/openlaptop.jpg" 
-              alt="openlaptop" 
-              width="360" 
-              height="300">
-              <h3 class="portfolio-name">Meditation App</h3>
-              <p class="portfolio-text">App</p>
-            </li>
-            <li>
-              <img 
-              src="./images/drivingcar.jpg" 
-              alt="drivingcar" 
-              width="360" 
-              height="300">
-              <h3 class="portfolio-name">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
-            <li>
-              <img 
-              src="./images/screenillustrationsexamples.jpg" 
-              alt="screenillustrationsexamples" 
-              width="360" 
-              height="300">
-              <h3 class="portfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
-            </li>
-            <li>
-              <img 
-              src="./images/girlwithselfphone.jpg" 
-              alt="girlwithselfphone" 
-              width="360" 
-              height="300">
-              <h3 class="portfolio-name">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
-            </li>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/paymentbyselphone.jpg"
+              alt="payment by selphone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/openlaptop.jpg"
+              alt="open laptop"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/drivingcar.jpg"
+              alt="driving car"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/screenillustrationsexamples.jpg"
+              alt="screen illustrations examples"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/girlwithselfphone.jpg"
+              alt="girl with selfphone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
         </ul>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a href="./index.html" class="link-logo">Web<span class="studio-logo-style-footer">Studio</span></a>
+      <a href="./index.html" class="link-logo-footer"
+        >Web<span class="logo-light">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
