--- a/index.html
+++ b/index.html
@@ -17,206 +17,220 @@
     <title><goit-markup-hw-3></title>
   </head>
   <body>
-    <header class="page-header">
-      <nav class="nav-page">
-        <a href="./index.html" class="link-logo-header"
-          >Web<span class="logo-dark">Studio</span></a
-        >
-        <ul class="nav-list">
-          <li class="nav-item">
-            <a href="./index.html" class="nav-link">Studio</a>
-          </li>
-          <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
-          <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a href="mailto:info@devstudio.com" class="contacts-mail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a href="tel:+110001111111" class="contacts-tel"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
+    
+      <header class="page-header">
+        <div class="container-header" class="container">
+          <nav class="nav-page">
+            <a href="./index.html" class="link-logo-header"
+              >Web<span class="logo-dark">Studio</span>
+            </a>
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link">Studio</a>
+              </li>
+              <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+              <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="contacts">
+            <ul class="contacts-list">
+              <li class="contacts-item">
+                <a href="mailto:info@devstudio.com" class="contacts-mail">
+                info@devstudio.com
+              </a>
+              </li>
+              <li class="contacts-item">
+                <a href="tel:+110001111111" class="contacts-tel">
+                  +11 (000) 111-11-11
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </header>
+   
 
     <main class="page-main">
       <section class="section-hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-order-button">Order Service</button>
+        <div class="container-hero" class="container>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="hero-order-button">Order Service</button>
+        </div>
       </section>
 
       <section class="section-features">
-        <h2 class="visually-hidden">Features</h2>
-        <ul class="features-list">
-          <li class="features-item">
-            <h3 class="features-name">Strategy</h3>
-            <p class="features-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-name">Punctuality</h3>
-            <p class="features-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="features-item">
-            <h3 class="features-name">Diligence</h3>
-            <p class="features-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="features-name">Technologies</h3>
-            <p class="features-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container-features" class="container>
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-name">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with the
+                perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-name">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands with the strongest digital growth
+                opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="features-name">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/markguerrero.jpg"
-              alt="Photo of Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/tomford.jpg"
-              alt="Photo of Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/camilagarcia.jpg"
-              alt="Photo of Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-img"
-              src="./images/danielwilson.jpg"
-              alt="Photo of Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container-team" class="container>
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/markguerrero.jpg"
+                alt="Photo of Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tomford.jpg"
+                alt="Photo of Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camilagarcia.jpg"
+                alt="Photo of Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/danielwilson.jpg"
+                alt="Photo of Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-portfolio">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/bankingappmenuexamples.jpg"
-              alt="banking app menu examples"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Banking App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/paymentbyselphone.jpg"
-              alt="payment by selphone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Cashless Payment</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/openlaptop.jpg"
-              alt="open laptop"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Meditation App</h3>
-            <p class="portfolio-text">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/drivingcar.jpg"
-              alt="driving car"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Taxi Service</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/screenillustrationsexamples.jpg"
-              alt="screen illustrations examples"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Screen Illustrations</h3>
-            <p class="portfolio-text">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="portfolio-img"
-              src="./images/girlwithselfphone.jpg"
-              alt="girl with selfphone"
-              width="360"
-              height="300"
-            />
-            <h3 class="portfolio-name">Online Courses</h3>
-            <p class="portfolio-text">Marketing</p>
-          </li>
-        </ul>
+        <div class="container-portfolio" class="container>
+          h2 class="portfolio-title>Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/bankingappmenuexamples.jpg"
+                alt="banking app menu examples"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Banking App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/paymentbyselphone.jpg"
+                alt="payment by selphone"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Cashless Payment</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/openlaptop.jpg"
+                alt="open laptop"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Meditation App</h3>
+              <p class="portfolio-text">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/drivingcar.jpg"
+                alt="driving car"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Taxi Service</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/screenillustrationsexamples.jpg"
+                alt="screen illustrations examples"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Screen Illustrations</h3>
+              <p class="portfolio-text">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/girlwithselfphone.jpg"
+                alt="girl with selfphone"
+                width="360"
+                height="300"
+              />
+              <h3 class="portfolio-name">Online Courses</h3>
+              <p class="portfolio-text">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a href="./index.html" class="link-logo-footer"
-        >Web<span class="logo-light">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container-footer" class="container>
+        <a href="./index.html" class="link-logo-footer">
+      Web<span class="logo-light">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
