--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     
       <header class="page-header">
-        <div class="container-header" class="container">
+        <div class="container header-container">
           <nav class="nav-page">
             <a href="./index.html" class="link-logo-header"
               >Web<span class="logo-dark">Studio</span>
@@ -52,14 +52,14 @@
 
     <main class="page-main">
       <section class="section-hero">
-        <div class="container-hero" class="container>
+        <div class="container hero-container>
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-order-button">Order Service</button>
         </div>
       </section>
 
       <section class="section-features">
-        <div class="container-features" class="container>
+        <div class="container features-container>
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
@@ -95,7 +95,7 @@
       </section>
 
       <section class="section-team">
-        <div class="container-team" class="container>
+        <div class="container team-container>
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -147,8 +147,8 @@
       </section>
 
       <section class="section-portfolio">
-        <div class="container-portfolio" class="container>
-          h2 class="portfolio-title>Our Portfolio</h2>
+        <div class="container portfolio-container>
+          <h2 class="portfolio-title>Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img
@@ -222,7 +222,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container-footer" class="container>
+      <div class="container footer-container>
         <a href="./index.html" class="link-logo-footer">
       Web<span class="logo-light">Studio</span>
         </a>
