--- a/index.html
+++ b/index.html
@@ -17,56 +17,54 @@
     <title><goit-markup-hw-3></title>
   </head>
   <body>
-    
-      <header class="page-header">
-        <div class="container header-container">
-          <nav class="nav-page">
-            <a href="./index.html" class="link-logo-header"
-              >Web<span class="logo-dark">Studio</span>
-            </a>
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="./index.html" class="nav-link">Studio</a>
-              </li>
-              <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
-              <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
-            </ul>
-          </nav>
-          <address class="contacts">
-            <ul class="contacts-list">
-              <li class="contacts-item">
-                <a href="mailto:info@devstudio.com" class="contacts-mail">
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="nav-page">
+          <a href="./index.html" class="link-logo-header"
+            >Web<span class="logo-dark">Studio</span>
+          </a>
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="./index.html" class="nav-link">Studio</a>
+            </li>
+            <li class="nav-item"><a href="" class="nav-link">Portfolio</a></li>
+            <li class="nav-item"><a href="" class="nav-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a href="mailto:info@devstudio.com" class="contacts-mail">
                 info@devstudio.com
               </a>
-              </li>
-              <li class="contacts-item">
-                <a href="tel:+110001111111" class="contacts-tel">
-                  +11 (000) 111-11-11
-                </a>
-              </li>
-            </ul>
-          </address>
-        </div>
-      </header>
-   
+            </li>
+            <li class="contacts-item">
+              <a href="tel:+110001111111" class="contacts-tel">
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
+    </header>
 
     <main class="page-main">
       <section class="section-hero">
-        <div class="container hero-container>
-          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions&nbsp;for Your Business</h1>
           <button type="button" class="hero-order-button">Order Service</button>
         </div>
       </section>
 
       <section class="section-features">
-        <div class="container features-container>
+        <div class="container features-container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-name">Strategy</h3>
               <p class="features-text">
-                Our goal is to identify the business problem to walk away with the
-                perfect and creative solution.
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
               </p>
             </li>
             <li class="features-item">
@@ -95,7 +93,7 @@
       </section>
 
       <section class="section-team">
-        <div class="container team-container>
+        <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -147,8 +145,8 @@
       </section>
 
       <section class="section-portfolio">
-        <div class="container portfolio-container>
-          <h2 class="portfolio-title>Our Portfolio</h2>
+        <div class="container portfolio-container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <img
@@ -222,13 +220,13 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container footer-container>
+      <div class="container footer-container">
         <a href="./index.html" class="link-logo-footer">
-      Web<span class="logo-light">Studio</span>
+          Web<span class="logo-light">Studio</span>
         </a>
         <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital
-          marketing & growth solutions.
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
         </p>
       </div>
     </footer>
