--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="page-main">
       <section class="section-hero">
         <div class="container hero-container">
-          <h1 class="hero-title">Effective Solutions&nbsp;for Your Business</h1>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero-order-button">Order Service</button>
         </div>
       </section>
@@ -149,70 +149,106 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/bankingappmenuexamples.jpg"
-                alt="banking app menu examples"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Banking App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/bankingappmenuexamples.jpg"
+                    alt="banking app menu examples"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Banking App</h3>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/paymentbyselphone.jpg"
-                alt="payment by selphone"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Cashless Payment</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/paymentbyselphone.jpg"
+                    alt="payment by selphone"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Cashless Payment</h3>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/openlaptop.jpg"
-                alt="open laptop"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Meditation App</h3>
-              <p class="portfolio-text">App</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/openlaptop.jpg"
+                    alt="open laptop"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Meditation App</h3>
+                  <p class="portfolio-text">App</p>
+                </div>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/drivingcar.jpg"
-                alt="driving car"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Taxi Service</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/drivingcar.jpg"
+                    alt="driving car"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Taxi Service</h3>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/screenillustrationsexamples.jpg"
-                alt="screen illustrations examples"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Screen Illustrations</h3>
-              <p class="portfolio-text">Design</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/screenillustrationsexamples.jpg"
+                    alt="screen illustrations examples"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Screen Illustrations</h3>
+                  <p class="portfolio-text">Design</p>
+                </div>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-img"
-                src="./images/girlwithselfphone.jpg"
-                alt="girl with selfphone"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-name">Online Courses</h3>
-              <p class="portfolio-text">Marketing</p>
+              <div class="portfolio-card-set">
+                <div class="portfolio-card-img">
+                  <img
+                    class="portfolio-img"
+                    src="./images/girlwithselfphone.jpg"
+                    alt="girl with selfphone"
+                    width="360"
+                    height="300"
+                  />
+                </div>
+                <div class="portfolio-card-text">
+                  <h3 class="portfolio-name">Online Courses</h3>
+                  <p class="portfolio-text">Marketing</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
