--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="features-item">
               <h3 class="features-name">Technologies</h3>
               <p class="features-text">
                 Design practice focused on digital experiences. We bring forth a
