--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title><goit-markup-hw-3></title>
+    <title>WEBSTUDIO</title>
   </head>
   <body>
     <header class="page-header">
@@ -163,8 +163,6 @@
                     class="portfolio-img"
                     src="./images/bankingappmenuexamples.jpg"
                     alt="banking app menu examples"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
@@ -180,8 +178,6 @@
                     class="portfolio-img"
                     src="./images/paymentbyselphone.jpg"
                     alt="payment by selphone"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
@@ -197,8 +193,6 @@
                     class="portfolio-img"
                     src="./images/openlaptop.jpg"
                     alt="open laptop"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
@@ -214,8 +208,6 @@
                     class="portfolio-img"
                     src="./images/drivingcar.jpg"
                     alt="driving car"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
@@ -231,8 +223,6 @@
                     class="portfolio-img"
                     src="./images/screenillustrationsexamples.jpg"
                     alt="screen illustrations examples"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
@@ -248,8 +238,6 @@
                     class="portfolio-img"
                     src="./images/girlwithselfphone.jpg"
                     alt="girl with selfphone"
-                    width="360"
-                    height="300"
                   />
                 </div>
                 <div class="portfolio-card-text">
