--- a/index.html
+++ b/index.html
@@ -158,13 +158,11 @@
           <ul class="portfolio-list">
             <li class="portfolio-item">
               <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/bankingappmenuexamples.jpg"
                     alt="banking app menu examples"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Banking App</h3>
                   <p class="portfolio-text">App</p>
@@ -173,13 +171,11 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/paymentbyselphone.jpg"
                     alt="payment by selphone"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Cashless Payment</h3>
                   <p class="portfolio-text">Marketing</p>
@@ -187,14 +183,12 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
+              <div class="portfolio-card-set">                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/openlaptop.jpg"
                     alt="open laptop"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Meditation App</h3>
                   <p class="portfolio-text">App</p>
@@ -203,13 +197,11 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/drivingcar.jpg"
                     alt="driving car"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Taxi Service</h3>
                   <p class="portfolio-text">Marketing</p>
@@ -218,13 +210,11 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/screenillustrationsexamples.jpg"
                     alt="screen illustrations examples"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Screen Illustrations</h3>
                   <p class="portfolio-text">Design</p>
@@ -233,13 +223,11 @@
             </li>
             <li class="portfolio-item">
               <div class="portfolio-card-set">
-                <div class="portfolio-card-img">
                   <img
                     class="portfolio-img"
                     src="./images/girlwithselfphone.jpg"
                     alt="girl with selfphone"
                   />
-                </div>
                 <div class="portfolio-card-text">
                   <h3 class="portfolio-name">Online Courses</h3>
                   <p class="portfolio-text">Marketing</p>
